<resources>
    <string name="app_name">A7</string>
    <string name="greeting_coffee">Order fresh brewed coffee</string>
    <string name="text_name">Name</string>
    <string name="text_size">Size</string>
    <string name="text_small">Small</string>
    <string name="text_medium">Medium</string>
    <string name="text_large">Large</string>
    <string name="text_brew">Brew</string>
    <string name="text_sugar">Sugar</string>
    <string name="text_milk">Milk</string>
    <string name="text_special">Special Instructions</string>
    <string name="text_load">Load Favorite</string>
    <string name="text_save">Save Favorite</string>
    <string name="text_order">Order</string>
    <string name="text_clear">Clear</string>
    
    <string name="text_summary_name">Order for %1$s</string>
    <!-- {Size} {Brew} {no/with} sugar {no/with} milk -->
    <string name="text_summary_detail">%1$s (%2$s), %3$s sugar, %4$s milk.</string>
    <string name="text_summary_special">Special instructions: %1$s</string>
    <string name="text_confirm">Confirm</string>
    <string name="text_cancel">Cancel</string>

    <string name="toast_save">Your preferences have been saved.</string>
    <string name="toast_load">Your preferences are loaded.</string>
    <string name="toast_cancel">Please amend your order and try again.</string>
    <string name="toast_confirm">Thank you for your order!</string>
</resources>
